--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-random": "~10.0.0",
